syntax = "proto3";
package GRPCServer;
option go_package = "api/v1";

message UserRequest {
  string name = 1;
}

message UserReply {
  string message = 1;
}