syntax = "proto3";
package GRPCServer;
option go_package = "api/v1";

import "user_model.proto";

service Auth {
  rpc GetUser (UserRequest) returns (UserReply) {}
}

